# parse-wiki-text-2

./: CHANGELOG.md  Cargo.toml  LICENSE
.github/workflows/: ci.yaml
examples/: example.rs
examples/test/: main.rs  test.rs  test_cases.rs
src/: bold_italic.rs  case_folding_simple.rs  character_entity.rs  comment.rs  configuration.rs  default.rs  external_link.rs  heading.rs  html_entities.rs  lib.rs  line.rs  link.rs  list.rs  magic_word.rs  parse.rs  positioned.rs  redirect.rs  state.rs  table.rs  tag.rs  template.rs  trie.rs  warning.rs
tests/: issues.rs  test_cases.rs  to_test_str.rs
tests/cases/: basic.test  bold_italic.test  character_entity.test  comment.test  external_link.test  heading.test  horizontal_divider.test  invalid_character.test  link.test  list.test  magic_word.test  mix.test  nowiki.test  paragraph_break.test  parameter.test  preformatted_block.test  redirect.test  table.test  tag.test  template.test
